--- a/index.html
+++ b/index.html
@@ -4,28 +4,35 @@
   <meta charset="UTF-8">
   <title>Kaie Kristiansen – Network Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+  <!-- Replaced JetBrains Mono with Inter font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'JetBrains Mono', monospace;
+      /* Changed font-family to Inter */
+      font-family: 'Inter', sans-serif;
       background-color: #0d0d0d;
-      color: #33ff33;
+      color: #ffffff;
       padding: 2rem;
     }
     h1 {
       font-size: 2rem;
       margin-bottom: 0.5rem;
-      color: #00ff99;
+      color: #ffffff;
+      font-weight: 700; /* Bolder weight for the main heading */
     }
     h2 {
       font-size: 1.3rem;
       margin-top: 2rem;
       border-bottom: 1px solid #333;
       padding-bottom: 0.2rem;
+      font-weight: 500; /* Medium weight for subheadings */
     }
     p, li {
       font-size: 1rem;
       line-height: 1.6;
+      font-weight: 400; /* Regular weight for body text */
     }
     a {
       color: #00ccff;
@@ -38,16 +45,16 @@
 </head>
 <body>
   <h1>Kaie Kristiansen</h1>
-  <p>Network Engineer | Infrastructure Architect | Juniper & Cisco Expert</p>
+  <p>Network Engineer | Infrastructure Architect</p>
 
   <h2>Summary</h2>
   <p>Seasoned network engineer with deep experience in BGP, OSPF, ISIS, MPLS, and VXLAN across large-scale service provider and data center environments. Hands-on with SCADA networks in critical infrastructure settings.</p>
 
   <h2>Skills</h2>
   <ul>
-    <li>Routing Protocols: BGP, OSPF, ISIS</li>
+    <li>Protocols: BGP, OSPF, ISIS, MPLS</li>
     <li>Overlay/Underlay: MPLS, VXLAN, L2VPN, L3VPN</li>
-    <li>Environments: Service Provider, Data Center, SCADA</li>
+    <li>Environments: Tier 1 SP, DC, SCADA</li>
     <li>Platforms: Cisco, Juniper</li>
   </ul>
 
