--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     h2 {
       font-size: 1.3rem;
       margin-top: 2rem;
-      border-bottom: 1px solid #333;
-      padding-bottom: 0.2rem;
+      /* Removed the border-bottom property to get rid of the lines */
       font-weight: 500; /* Medium weight for subheadings */
     }
     p, li {
