--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <p>Network Engineer | Infrastructure Architect</p>
 
   <h2>Summary</h2>
-  <p>Seasoned network engineer with deep experience in BGP, OSPF, ISIS, MPLS, and VXLAN across large-scale service provider and data center environments. Hands-on with SCADA networks in critical infrastructure settings.</p>
+  <p>Network engineer with operational and design experience across Tier 1 ISP, FTTH, fixed wireless, SCADA, and data centers (traditional and spine-leaf)</p>
 
   <h2>Skills</h2>
   <ul>
