--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <h2>Skills</h2>
   <ul>
     <li>Protocols: BGP, OSPF, ISIS, MPLS</li>
+    <li>Focus: network design, rearchitecture, sustainment</li>
     <li>Overlay/Underlay: MPLS, VXLAN, L2VPN, L3VPN</li>
     <li>Environments: Tier 1 SP, DC, SCADA</li>
     <li>Platforms: Cisco, Juniper</li>
