--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <p>Network Engineer | Infrastructure Architect</p>
 
   <h2>Summary</h2>
-  <p>Network engineer with operational and design experience across Tier 1 Backbone, cellular core, FTTH, fixed wireless, SCADA, and data centers [traditional and spine-leaf]</p>
+  <p>engineer with operational and design experience across Tier 1 Backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations—including end-of-life chassis replacements and platform transitions</p>
 
   <h2>Skills</h2>
   <ul>
