--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 
   <h2>Skills</h2>
   <ul>
-    <li>Protocols: BGP, OSPF, ISIS, MPLS</li>
+    <li>Protocols: BGP, OSPF, IS-IS, MPLS/LDP + MP-BGP [L2/3VPN, EVPN/VXLAN]</li>
     <li>Focus: network design, rearchitecture, sustainment</li>
-    <li>Overlay/Underlay: MPLS, VXLAN, L2VPN, L3VPN</li>
-    <li>Environments: Tier 1 SP, DC, SCADA</li>
+    <li>Environments: SP, DC, SCADA</li>
     <li>Platforms: Cisco, Juniper</li>
   </ul>
 
