--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
   </ul>
 
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:kaie@loopback.sh">kaie@loopback.sh</a></p>
+  <p>Email: <a href="mailto:connect@loopback.sh">connect@loopback.sh</a></p>
 </body>
 </html>
