--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
 </head>
 <body>
   <h1>Kaie Kristiansen</h1>
-  <p>Network Engineer – Architecture & Operations</p>
+  <p>network engineer – architecture & operations</p>
 
-  <h2>Summary</h2>
+  <h2>summary</h2>
   <p>engineer with operational and design experience across Tier 1 Backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations, including end-of-life chassis replacements, platform transitions and sustainment efforts in production networks</p>
 
-  <h2>Skills</h2>
+  <h2>skills</h2>
   <ul>
-    <li>Protocols: BGP, OSPF, IS-IS, MPLS/LDP + MP-BGP [L2/3VPN, EVPN/VXLAN]</li>
-    <li>Focus: network design, rearchitecture, sustainment</li>
-    <li>Environments: SP, DC, SCADA</li>
-    <li>Platforms: Cisco, Juniper</li>
+    <li>protocols: BGP, OSPF, IS-IS, MPLS/LDP + MP-BGP [L2/3VPN, EVPN/VXLAN]</li>
+    <li>focus: network design, rearchitecture, sustainment</li>
+    <li>environments: SP, DC, SCADA</li>
+    <li>platforms: Cisco, Juniper</li>
   </ul>
 
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:connect@loopback.sh">connect@loopback.sh</a></p>
+  <p>email: <a href="mailto:connect@loopback.sh">connect@loopback.sh</a></p>
 </body>
 </html>
