--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <li>platforms: Cisco, Juniper</li>
   </ul>
 
-  <h2>Contact</h2>
+  <h2>contact</h2>
   <p>email: <a href="mailto:connect@loopback.sh">connect@loopback.sh</a></p>
 </body>
 </html>
