--- a/index.html
+++ b/index.html
@@ -50,12 +50,10 @@
   <p>engineer with operational and design experience across Tier 1 Backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations, including end-of-life chassis replacements, platform transitions and sustainment efforts in production networks</p>
 
   <h2>skills</h2>
-  <ul>
-    <li>protocols: BGP, OSPF, IS-IS, MPLS/LDP + MP-BGP [L2/3VPN, EVPN/VXLAN]</li>
-    <li>focus: network design, rearchitecture, sustainment</li>
-    <li>environments: SP, DC, SCADA</li>
-    <li>platforms: Cisco, Juniper</li>
-  </ul>
+  <p><strong>protocols:</strong> BGP, OSPF, IS-IS, MPLS/LDP + MP-BGP [L2/3VPN, EVPN/VXLAN]</p>
+  <p><strong>focus:</strong> network design, rearchitecture, sustainment</p>
+  <p><strong>environments:</strong> SP, DC, SCADA</p>
+  <p><strong>platforms:</strong> Cisco, Juniper</p>
 
   <h2>contact</h2>
   <p>email: <a href="mailto:connect@loopback.sh">connect@loopback.sh</a></p>
