--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     }
     h2 {
       font-size: 1.3rem;
-      margin-top: 2rem;
+      /* Increased margin-top to add more space */
+      margin-top: 3rem; 
       /* Removed the border-bottom property to get rid of the lines */
-      font-weight: 500; /* Medium weight for subheadings */
+      /* Changed font-weight to bold the headings */
+      font-weight: 700; 
     }
     p, li {
       font-size: 1rem;
