--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kaie Kristiansen – Network Engineer</title>
+  <!-- Changed the title to 'Lo0' -->
+  <title>Lo0</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Replaced JetBrains Mono with Inter font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     body {
-      /* Changed font-family to Inter */
       font-family: 'Inter', sans-serif;
       background-color: #0d0d0d;
       color: #ffffff;
@@ -20,20 +19,17 @@
       font-size: 2rem;
       margin-bottom: 0.5rem;
       color: #ffffff;
-      font-weight: 700; /* Bolder weight for the main heading */
+      font-weight: 700; 
     }
     h2 {
       font-size: 1.3rem;
-      /* Increased margin-top to add more space */
       margin-top: 3rem; 
-      /* Removed the border-bottom property to get rid of the lines */
-      /* Changed font-weight to bold the headings */
       font-weight: 700; 
     }
     p, li {
       font-size: 1rem;
       line-height: 1.6;
-      font-weight: 400; /* Regular weight for body text */
+      font-weight: 400; 
     }
     a {
       color: #00ccff;
@@ -52,7 +48,6 @@
   <p>engineer with operational and design experience across Tier 1 Backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations, including end-of-life chassis replacements, platform transitions and sustainment efforts in production networks.</p>
 
   <h2>skills</h2>
-  <!-- Replaced separate <p> tags with <br> tags inside a single <p> -->
   <p>
     <strong>protocols:</strong> BGP, OSPF, IS-IS, MPLS/LDP + MP-BGP [L2/3VPN, EVPN/VXLAN]<br>
     <strong>focus:</strong> network design, rearchitecture, sustainment<br>
