--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
   </p>
 
   <h2>contact</h2>
-  <p>email: <a href="mailto:connect@loopback.sh">connect@loopback.sh</a></p>
+  <p>email: <a href="mailto:Lo0@loopback.sh">Lo0@loopback.sh</a></p>
 </body>
 </html>
