--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <p>network engineer – architecture & operations</p>
 
   <h2>summary</h2>
-  <p>engineer with operational and design experience across Tier 1 Backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations, including end-of-life chassis replacements, platform transitions and sustainment efforts in production networks.</p>
+  <p>engineer with operational and design experience across Tier 1 backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations, including end-of-life chassis replacements, platform transitions and sustainment efforts in production networks.</p>
 
   <h2>skills</h2>
   <p>
