--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <h2>summary</h2>
   <!-- Added the "summary-text" class to this paragraph -->
-  <p class="summary-text">engineer with operational and design experience across Tier 1 Backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations, including end-of-life chassis replacements, platform transitions and sustainment efforts in production networks.</p>
+  <p class="summary-text">engineer with operational and design experience across tier 1 backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations, including end-of-life chassis replacements, platform transitions and sustainment efforts in production networks.</p>
 
   <h2>skills</h2>
   <p>
@@ -60,6 +60,6 @@
   </p>
 
   <h2>contact</h2>
-  <p>email: <a href="mailto:connect@loopback.sh">connect@loopback.sh</a></p>
+  <p>email: <a href="mailto:RE0@loopback.sh">RE0@loopback.sh</a></p>
 </body>
 </html>
