--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
   <!-- Added the "summary-text" class to this paragraph -->
   <p class="summary-text">engineer with operational and design experience across tier 1 backbone, cellular core, FTTH, fixed wireless, SCADA and data centers [traditional & spine-leaf]. Led full lifecycle projects and recurring programs across greenfield builds, redesigns and legacy migrations, including end-of-life chassis replacements, platform transitions and sustainment efforts in production networks.</p>
 
-  <h2>skills</h2>
+  <h2>experience</h2>
   <p>
     <strong>protocols:</strong> BGP, OSPF, IS-IS, MPLS/LDP + MP-BGP [L2/3VPN, EVPN/VXLAN]<br>
     <strong>focus:</strong> network design, rearchitecture, sustainment<br>
     <strong>environments:</strong> SP, DC, SCADA<br>
-    <strong>platforms:</strong> Cisco, Juniper
+    <strong>platforms:</strong> Cisco, Juniper<br>
+    <strong>projects:</strong> EOL replacements, 
   </p>
 
   <h2>contact</h2>
