--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <strong>focus:</strong> network design, rearchitecture, sustainment<br>
     <strong>environments:</strong> SP, DC, SCADA<br>
     <strong>platforms:</strong> Cisco, Juniper<br>
-    <strong>projects:</strong> EOL replacements, 
+    <strong>projects:</strong> EOL replacements, DC conversion to spine & leaf, RCA & remediation, FTTH & fixed wireless deployment, L3VPN provisioning, platform migrations from Brocade to Juniper, redundancy testing 
   </p>
 
   <h2>contact</h2>
