--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <title>Lo0</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Open Graph Meta Tags for Rich Link Previews -->
+  <meta property="og:title" content="Kaie Kristiansen – Network Engineer">
+  <meta property="og:description" content="Portfolio and contact information for Kaie Kristiansen, a network engineer specializing in architecture and operations.">
+  <!-- Replace this with a direct link to an image you want to use -->
+  <meta property="og:image" content="https://placehold.co/1200x630/0d0d0d/ffffff?text=Kaie+Kristiansen">
+  <meta property="og:url" content="https://loopback.sh"> <!-- Replace with your actual domain -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
