--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <h2>experience</h2>
   <p>
-    <strong>protocols:</strong> BGP, OSPF, IS-IS, MPLS/LDP + MP-BGP [L2/3VPN, EVPN/VXLAN]<br>
+    <strong>protocols:</strong> BGP, OSPF, IS-IS, MPLS/LDP [L2/3VPN], EVPN-VXLAN<br>
     <strong>focus:</strong> network design, rearchitecture, sustainment<br>
     <strong>environments:</strong> SP, DC, SCADA<br>
     <strong>platforms:</strong> Cisco, Juniper<br>
